Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122816

QtGrpc generator asserts when no messages defined in .proto file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.0 RC, 6.8.0 FF
    • 6.7
    • GRPC
    • None
    • 56f7edbe2 (dev), 2a3cdd249 (6.7), 0fb891737 (6.6)

    Description

      When no messages are presented in .proto file following example craches on compilation (test.proto):

      import "google/protobuf/empty.proto";
      package MyPackage;
      service MyService {
      rpc Check(google.protobuf.Empty) returns (google.protobuf.Empty) {}
      }
      

       

      CMakeLists.txt:

      qt_add_grpc(testlib CLIENT
          PROTO_FILES
            test.proto
      )
      

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            semlanik Alexey Edelev
            tatiana.borisova Tatiana Borisova
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: